# packet_parser_mcdr

./: .gitignore  README.MD  README_zh.MD  mcdreforged.plugin.json  packet_parser.sublime-project  packet_parser_mcdr.sublime-project  publisher.sh  pyproject.toml  test.sh
generator/: .gitignore  generator.py  packetname_map.py
lang/: zh_cn.yml
packet_parser/: __init__.py  api.py  conn.py  idset.py  packet.py  utils.py
packet_parser/commandnode/: __init__.py  node.py  props.py  ranges.py
packet_parser/nbt/: __init__.py  compound.py  list.py  mutf8.py  nbt.py  numbers.py
packet_parser/packets/: __init__.py  packet_1_19.py
packet_parser_mcdr/: __init__.py  api.py  conn.py  packet.py  packet_1_8.py  packets.py
packet_parser_mcdr/nbt/: __init__.py
