
[tool.ruff]

ignore = [
	"F403",
	"E701",
]

line-length = 100

[tool.mypy]

mypy_path = ":${MYPY_CONFIG_FILE_DIR}/../kpi_mcdr/:${MYPY_CONFIG_FILE_DIR}/../login_proxy_mcdr/"
ignore_missing_imports = true
disable_error_code = ['misc']

[tool.poetry]

name = "packet_parser_mcdr"
version = "0.0.0"
description = "A packet parser plugin for minecraft java edition"
authors = [
	"zyxkad"
]
readme = "README.MD"

[tool.poetry.dependencies]
python = "^3.10"

